[package]
name = "mepower"
version = "0.1.0"
edition = "2021"
description = "Display CMP Power Outage Information"
license = "MIT"
authors = [ "boB Rudis (@hrbrmstr)" ]
homepage = "https://github.com/hrbrmstr/mepower"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.11", features = ["blocking", "json"] }
pad = "0.1.6"
clap = { version = "4.0.9", features = ["derive"] }
colored = "2.0.0"
scraper = "0.13.0"
anyhow = "1.0.65"
itertools = "0.10.5"
serde = "1.0.145"
serde_derive = "1.0.145"
serde_json = "1.0.85"
titlecase = "2.2.1"
chrono = "0.4.22"

[lib]
name = "cmpco"
path = "src/lib.rs"

[[bin]]
name = "mepower"
path = "src/main.rs"